--- a/hep-ph-0609174/FTSM.tex
+++ b/hep-ph-0609174/FTSM.tex
@@ -36,6 +36,8 @@ bookmarksopenlevel=10
 \raggedbottom
 \pagestyle{plain}
 
+\usepackage{eulervm}
+
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
@@ -103,9 +105,9 @@ bookmarksopenlevel=10
 \newcommand{\ket}[1]{\ensuremath{\!\left| #1 \right\rangle}}
 \newcommand{\braket}[2]{\ensuremath{\left.\left\langle #1\vphantom{#2}\,\right|#2\right\rangle}}
 \newcommand{\braopket}[3]{\ensuremath{\left\langle#1\left|\vphantom{#1 #3} #2\right|#3 \right\rangle}}
-\newcommand{\sun}{\ensuremath{\mathsf{SU(}n\mathsf{)}}}
-\newcommand{\sutwo}{\ensuremath{\mathsf{SU(2)}}}
-\newcommand{\suthree}{\ensuremath{\mathsf{SU(3)}}}
+\newcommand{\sun}{\ensuremath{\mathrm{SU(}n\mathrm{)}}}
+\newcommand{\sutwo}{\ensuremath{\mathrm{SU(2)}}}
+\newcommand{\suthree}{\ensuremath{\mathrm{SU(3)}}}
 
 \DeclareMathOperator{\T}{T}
 \DeclareMathOperator{\tr}{tr}
@@ -240,7 +242,7 @@ bookmarksopenlevel=10
     \end{align}
     These forces are gauge interactions, associated with the symmetry group
     \begin{align}
-      G_\text{SM}&=\mathsf{SU(3)}_C\times \mathsf{SU(2)}_W \times \mathsf{U(1)}_Y \; ,
+      G_\text{SM}&=\mathrm{SU(3)}_C\times \mathrm{SU(2)}_W \times \mathrm{U(1)}_Y \; ,
     \end{align}
     where the subscripts $C$, $W$, and $Y$ denote colour, weak isospin and hypercharge, respectively.
 
@@ -286,13 +288,13 @@ bookmarksopenlevel=10
     \begin{itemize}
       \item The gauge group is composed of three subgroups with different properties:
         \begin{itemize}
-          \item The $\mathsf{SU(3)}$ part leads to quantum chromodynamics, the theory of strong
+          \item The $\mathrm{SU(3)}$ part leads to quantum chromodynamics, the theory of strong
             interactions \cite{ecker}. Here the most important phenomena are asymptotic
             freedom and confinement: The quarks and gluons appear as free particles only at very
             short distances, probed in deep-inelastic scattering, but are confined into mesons 
             and baryons at large distances.
-          \item The $\mathsf{SU(2) \times U(1)}$ subgroup describes the electroweak sector of the
-            standard model. It gets broken down to the $\mathsf U(1)_\text{em}$ subgroup of quantum
+          \item The $\mathrm{SU(2) \times U(1)}$ subgroup describes the electroweak sector of the
+            standard model. It gets broken down to the $\mathrm U(1)_\text{em}$ subgroup of quantum
             electrodynamics by the Higgs mechanism, leading to massive $W$ and $Z$ bosons which are 
             responsible for charged and neutral current weak interactions, respectively.
       \end{itemize}
@@ -733,7 +735,7 @@ bookmarksopenlevel=10
         \L&= \partial_\mu \phi^\dagger \partial^\mu \phi- m^2 \phi^\dagger \phi\,.
       \end{align}
       
-      The Lagrangian has a $\mathsf{U(1)}$-symmetry, i.e.,
+      The Lagrangian has a $\mathrm{U(1)}$-symmetry, i.e.,
       under the transformation of the field 
       \begin{align}
         \phi\to\phi'= e^{\i \alpha} \phi\,,\quad \alpha=\const\,,
@@ -847,7 +849,7 @@ bookmarksopenlevel=10
         derivative from $\psi$ to $\psib$ via integration by parts. This slightly modifies the
         computation, but the result is still the same.}
 
-      The Lagrangian again has a $\mathsf{U(1)}$-symmetry, the multiplication of $\psi$ by a constant 
+      The Lagrangian again has a $\mathrm{U(1)}$-symmetry, the multiplication of $\psi$ by a constant 
       phase,
       \begin{align}
         \psi\to\psi' =e^{\i\alpha} \psi\,, \qquad \psib\to\psib'=e^{-\i\alpha}\psib\,,
@@ -1419,7 +1421,7 @@ bookmarksopenlevel=10
         \L&=\partial_\mu \phi^\dagger \partial^\mu - V\!\left(\phi^\dagger\phi\right)\,,
       \end{align}
       which is a generalisation of the one considered in Eq.~(\ref{eq:Lscalarfree}). This theory has a
-      $\mathsf{U(1)}$ symmetry under which $\phi\to\phi' = \exp\!\left\{\i\alpha\right\}\phi$ with
+      $\mathrm{U(1)}$ symmetry under which $\phi\to\phi' = \exp\!\left\{\i\alpha\right\}\phi$ with
       constant parameter $\alpha$. Usually it is sufficient to consider the variation of the fields
       and the Lagrangian under infinitesimal transformations,
       \begin{align}\label{eq:scalar_u1}
@@ -1489,14 +1491,14 @@ bookmarksopenlevel=10
         \Box \phi +\frac{\partial V}{\partial \phi}\! \left(\phi,\phi^\dagger\right) = \Box \phi -\phi^\dagger
         \left(\mu^2-2\lambda\phi^\dagger\phi \right)=0\,.
       \end{align}
-      These solutions are not invariant under $\mathsf{U(1)}$ phase rotations. On the other hand,
+      These solutions are not invariant under $\mathrm{U(1)}$ phase rotations. On the other hand,
       it is obvious that any solution to the equations of motion will be mapped into another
       solution under such a transformation.
       
       This situation is analogous to the Kepler problem: A planet moving
       around a stationary 
       (very massive) star. The setup is invariant under spatial rotations around the star, i.e., the
-      symmetries form the group $\mathsf{SO(3)}$. This group is three-dimensional 
+      symmetries form the group $\mathrm{SO(3)}$. This group is three-dimensional 
       (meaning that any rotation can be built from three independent rotations, e.g.\ around the
       three axes of a Cartesian coordinate system). Thus there are three conserved charges
       which correspond to the three components of angular momentum. The
@@ -1567,7 +1569,7 @@ bookmarksopenlevel=10
       The easiest way to come up with a gauge symmetry is to start from a global symmetry and promote
       it to a gauge one, that is, demand invariance of the Lagrangian under local
       transformations (where the transformation parameter is a function of spacetime). To see
-      this, recall the Lagrangian with the global $\mathsf{U(1)}$ symmetry from the preceding
+      this, recall the Lagrangian with the global $\mathrm{U(1)}$ symmetry from the preceding
       section, 
       \begin{align*}
         \L&=\partial_\mu \phi^\dagger \partial^\mu\phi - V(\phi^\dagger\phi)\,,
@@ -1616,7 +1618,7 @@ bookmarksopenlevel=10
         V\left(\phi^\dagger\phi\right)\,.
       \end{align}
       
-      So far this is a theory of a complex scalar with $\mathsf{U(1)}$ gauge invariance. The gauge
+      So far this is a theory of a complex scalar with $\mathrm{U(1)}$ gauge invariance. The gauge
       field $A_\mu$, however, is not a dynamical field, i.e., there is
       no kinetic term for it.  This kinetic term should be gauge invariant and contain derivatives
       up to second order. In order to find such a kinetic term, we first construct the field
@@ -1667,13 +1669,13 @@ bookmarksopenlevel=10
         \psi&\to\psi' = e^{\i\alpha} \psi\,.
       \end{align}
       In the Lagrangian, one again replaces the ordinary derivative with the covariant one. The
-      Lagrangian for a fermion coupled to a $\mathsf{U(1)}$ gauge field is quantum
+      Lagrangian for a fermion coupled to a $\mathrm{U(1)}$ gauge field is quantum
       electrodynamics~(QED), if we call the fields electron and photon:\index{Lagrangian!QED}
       \begin{align}
         \L_\text{QED}&= -\frac{1}{4} F_{\mu\nu} F^{\mu\nu} +\psib\left(\i \Dslash -m\right) \psi \,.
       \end{align}
       
-      Finally, let us note that for a $\mathsf{U(1)}$ gauge theory, different fields may have
+      Finally, let us note that for a $\mathrm{U(1)}$ gauge theory, different fields may have
       different charges under the gauge group (as e.g.\ quarks and leptons indeed do). For fields
       with charge $q$ (in units of elementary charge), we have to
       replace the gauge transformations and consequently the covariant derivative as follows:
@@ -1683,7 +1685,7 @@ bookmarksopenlevel=10
       \end{align}
       
       What have we done so far? We started from a Lagrangian, Eq.~(\ref{eq:Lscalar}) with a
-      global $\mathsf{U(1)}$ symmetry (\ref{eq:scalar_u1}). We imposed invariance under local
+      global $\mathrm{U(1)}$ symmetry (\ref{eq:scalar_u1}). We imposed invariance under local
       transformations, so we had to introduce a new field, the gauge field $A_\mu$. This
       field transformed inhomogeneously under gauge transformations, just in a way to make a
       covariant derivative. This covariant derivative was the object that coupled the gauge field
@@ -1698,7 +1700,7 @@ bookmarksopenlevel=10
     \section{Non-Abelian Gauge Theories}
       To construct non-Abelian theories in the same way as before, we first have to discuss
       non-Abelian groups, i.e., groups whose elements do not commute. We will focus on the groups
-      $\sun$\index{SUN@$\mathsf{SU(}n\mathsf{)}$}, since they are  
+      $\sun$\index{SUN@$\mathrm{SU(}n\mathrm{)}$}, since they are  
       most relevant for the standard model. $\sun$ is the group of $n\times n$ complex unitary
       matrices with determinant 1. To see how many degrees of freedom there are, we have to count: A
       $n\times n$ complex matrix $U$ has $n^2$ complex entries, equivalent to  $2n^2$ real
@@ -1732,11 +1734,11 @@ bookmarksopenlevel=10
 
       In the standard model, the relevant groups are $\sutwo$ for the electroweak theory and
       $\suthree$ for QCD. $\sutwo$ has three parameters. The generators are usually
-      chosen to be the Pauli matrices\index{Group generators!Pauli matrices for $\mathsf{SU(2)}$},
+      chosen to be the Pauli matrices\index{Group generators!Pauli matrices for $\mathrm{SU(2)}$},
       $T^a=\frac{1}{2}\sigma^a$, whose commutation relations are 
       $\left[\sigma^a,\sigma^b\right]=\i \varepsilon^{abc}\sigma^c$. The common generators of
       $\suthree$ are the eight Gell-Mann matrices,
-      $T^a=\frac{1}{2}\lambda^a$\index{Group generators!Gell-Mann matrices for $\mathsf{SU(3)}$}.
+      $T^a=\frac{1}{2}\lambda^a$\index{Group generators!Gell-Mann matrices for $\mathrm{SU(3)}$}.
       
       To construct a model with a global $\sun$ symmetry, we consider not a single
       field, but an $n$-component vector $\Phi_i$, $i=1,\ldots,n$ (called a multiplet of $\sun$),
@@ -2817,7 +2819,7 @@ bookmarksopenlevel=10
       \end{align}
       The
       coefficients of the $1/\epsilon$-divergences depend on the gauge group and on the number of
-      different fermions. For a $\mathsf{SU(}N_\text{c}\mathsf{)}$ gauge group with $N_\text{f}$
+      different fermions. For a $\mathrm{SU(}N_\text{c}\mathrm{)}$ gauge group with $N_\text{f}$
       flavours of fermions, one obtains the $\beta$ function for the gauge coupling $g$,
       \index{beta@$\beta$ function!for QCD coupling} 
       \begin{align}
@@ -2889,28 +2891,28 @@ bookmarksopenlevel=10
       particles, we will have seven chiral spinors: Two each for up- and down-type quark and charged
       lepton, and just one for the neutrino which we will treat as massless in this chapter, i.e.,
       we omit the right-handed one. The electroweak gauge group is a product of two groups,
-      $\mathsf{G}_{EW}=\mathsf{SU(2)}_W \times \mathsf{U(1)}_Y$
+      $\mathrm{G}_{EW}=\mathrm{SU(2)}_W \times \mathrm{U(1)}_Y$
       \index{Electroweak theory!gauge group}. Here the subscript $W$ stands for 
-      ``weak isospin'', which is the quantum number associated with the $\mathsf{SU(2)}_W$ factor, and
-      the $\mathsf{U(1)}$ charge is the hypercharge $Y$.  
+      ``weak isospin'', which is the quantum number associated with the $\mathrm{SU(2)}_W$ factor, and
+      the $\mathrm{U(1)}$ charge is the hypercharge $Y$.  
       
       The assignment of quantum numbers, which corresponds to the grouping into representations of 
-      the gauge group, is obtained as follows: The non-Abelian group $\mathsf{SU(2)}_W$ has a chargeless 
+      the gauge group, is obtained as follows: The non-Abelian group $\mathrm{SU(2)}_W$ has a chargeless 
       one-dimensional singlet ($\mathbf{1}$) representation and charged multidimensional representations,
       starting with the two-dimensional doublet ($\mathbf{2}$) representation\footnote{Here we use
         ``representation'' as meaning ``irreducible representation''. Of course we can build
         reducible representations of any dimension.}. We are not allowed to mix
       quarks and leptons, since weak interactions do not change colour, nor
       left- and right-handed fields, which would violate Lorentz symmetry. 
-      The $\mathsf{U(1)}_Y$ factor is Abelian, so it only has
+      The $\mathrm{U(1)}_Y$ factor is Abelian, so it only has
       one-dimensional representations. This means we can assign different hypercharges we to the
-      various singlets and doublets of $\mathsf{SU(2)}_W$.
+      various singlets and doublets of $\mathrm{SU(2)}_W$.
 
       Furthermore, we know that charged currents connect up- with down-type
       quarks and charged leptons with neutrinos, and that the $W^\pm$ bosons couple only to
       left-handed fermions. This suggests to form doublets  from $u_\ls$ and $d_\ls$, and
       from $e_\ls$ and $\nu_\ls$, and to keep the right-handed fields as singlets. So we 
-      obtain the $\mathsf{SU(2)}_W$ multiplets
+      obtain the $\mathrm{SU(2)}_W$ multiplets
        \begin{align}
         q_\ls&=\begin{pmatrix} u_\ls \\ d_\ls\end{pmatrix}\,, &&u_\rs\,, && d_\rs\,,  &
         l_\ls&=\begin{pmatrix} \nu_\ls \\  e_\ls\end{pmatrix}\,, &&  e_\rs\,,
@@ -2925,14 +2927,14 @@ bookmarksopenlevel=10
       \end{align}
 
       With these representations, we can write down the covariant derivatives. The
-      $\mathsf{SU(2)}_W$ has three generators, which we choose to be the Pauli matrices, and 
-      therefore three gauge fields $W_\mu^I$, $I=1,2,3$. The $\mathsf{U(1)}_Y$ gauge field is
+      $\mathrm{SU(2)}_W$ has three generators, which we choose to be the Pauli matrices, and 
+      therefore three gauge fields $W_\mu^I$, $I=1,2,3$. The $\mathrm{U(1)}_Y$ gauge field is
       $B_\mu$\index{Electroweak theory!$W^I$ and $B$ bosons}, and the coupling constants are
       $g$ and $g'$, respectively. The covariant derivatives acting on the left-handed fields are
       \begin{align}
         D_\mu \psi_\ls &= \left(\partial_\mu +\i g W_\mu + \i g' Y B_\mu \right)\psi_\ls\,,\quad
         \text{where } W_\mu=\tfrac{1}{2} \sigma^I W_\mu^I\,,\\
-        \intertext{while the right-handed fields are singlets under $\mathsf{SU(2)}_W$, and hence do
+        \intertext{while the right-handed fields are singlets under $\mathrm{SU(2)}_W$, and hence do
         not couple to the $W$ bosons,}
         D_\mu \psi_\rs&= \left(\partial_\mu + \i g' Y B_\mu\right) \psi_\rs\;.
       \end{align}
@@ -2942,7 +2944,7 @@ bookmarksopenlevel=10
           0&-\i \\ \i&0\end{pmatrix}\,, &\sigma^3&=\begin{pmatrix} 1&0\\0&-1\end{pmatrix} \,,
       \end{align}
       we see that $W^1_\mu$ and $W_\mu^2$ mix up- and down-type quarks, while
-      $W_\mu^3$ does not, like the $\mathsf{U(1)}$ boson $B_\mu$.
+      $W_\mu^3$ does not, like the $\mathrm{U(1)}$ boson $B_\mu$.
       
       \medskip
       
@@ -3010,15 +3012,15 @@ bookmarksopenlevel=10
         \end{align}
         Here the trace is taken over all fermions. 
         For the electroweak theory, in principle there are four combinations of currents, containing
-        three, two, one or no $\mathsf{SU(2)}_W$ current. However, the trace of any odd number of
-        $\sigma^I$ matrices vanishes, so we only have to check the $\mathsf{SU(2)}_W^2
-        \mathsf{U(1)}_Y$ and $\mathsf{U(1)}_Y^3$ anomalies.
+        three, two, one or no $\mathrm{SU(2)}_W$ current. However, the trace of any odd number of
+        $\sigma^I$ matrices vanishes, so we only have to check the $\mathrm{SU(2)}_W^2
+        \mathrm{U(1)}_Y$ and $\mathrm{U(1)}_Y^3$ anomalies.
         
-        The $\mathsf{SU(2)}_W$ generators are $\frac{1}{2} \sigma^I$, whose anticommutator is
+        The $\mathrm{SU(2)}_W$ generators are $\frac{1}{2} \sigma^I$, whose anticommutator is
         $\left\{\frac{1}{2} \sigma^I, \frac{1}{2} \sigma^J\right\}
         =\frac{1}{2}\delta^{IJ}$. Furthermore, only the left-handed fields contribute, since the
-        right-handed ones are $\mathsf{SU(2)}_W$ singlets. Hence the
-        $\mathsf{SU(2)}_W^2\mathsf{U(1)}_Y$ anomaly is 
+        right-handed ones are $\mathrm{SU(2)}_W$ singlets. Hence the
+        $\mathrm{SU(2)}_W^2\mathrm{U(1)}_Y$ anomaly is 
         \begin{align}
           \mathscr{A} &= \tr \left[\left\{\frac{1}{2} \sigma^I, \frac{1}{2} \sigma^J\right\}
             Y\right]_L = \frac{1}{2}\delta^{IJ}\, \tr\left[Y\right]_L =\frac{1}{2}\delta^{IJ}\,
@@ -3026,7 +3028,7 @@ bookmarksopenlevel=10
         \end{align}
         We see that it only vanishes if quarks come in three colours!
 
-        The $\mathsf{U(1)}_Y^3$ anomaly also vanishes:
+        The $\mathrm{U(1)}_Y^3$ anomaly also vanishes:
         \begin{align}
           \begin{split}
             \mathscr{A} &= \tr \left[\left\{Y,Y\right\}Y\right]_L - \tr
@@ -3046,9 +3048,9 @@ bookmarksopenlevel=10
         automatic.
         
         Anomaly cancellation is not restricted to the electroweak gauge currents, but applies to the
-        strong force and gravity as well: Mixed $\mathsf{SU(3)}_C$-$\mathsf{U(1)}_Y$ anomalies
+        strong force and gravity as well: Mixed $\mathrm{SU(3)}_C$-$\mathrm{U(1)}_Y$ anomalies
         vanish by the same argument as above: 
-        Only the $\mathsf{SU(3)}_C^2\mathsf{U(1)}_Y$ triangle contributes, but it is $\tr
+        Only the $\mathrm{SU(3)}_C^2\mathrm{U(1)}_Y$ triangle contributes, but it is $\tr
         \left[Y\right]_L -\tr \left[Y\right]_R =0$. The same is true for the last possible anomaly,
         the gravitational one, where two non-Abelian gauge currents are replaced by the 
         energy-momentum tensor $T_{\mu\nu}$.
@@ -3081,7 +3083,7 @@ bookmarksopenlevel=10
       superconductor, levitating it.
 
       The key ingredient for the Higgs mechanism is a complex scalar field $\Phi$, which is a
-      doublet under $\mathsf{SU(2)}_W$ with hypercharge $-\frac{1}{2}$, which
+      doublet under $\mathrm{SU(2)}_W$ with hypercharge $-\frac{1}{2}$, which
       has four real degrees of freedom. The crucial feature of the Higgs field is its
       potential ,which is of the  Mexican hat form:
       \begin{align}\label{eq:LHiggs}\index{Higgs!potential}
@@ -3203,7 +3205,7 @@ bookmarksopenlevel=10
       The Higgs mechanism described above is also called spontaneous symmetry
       breaking\index{Spontaneous symmetry breaking}. This term, however, is somewhat misleading:
       Gauge symmetries are never broken, but only hidden. The Lagrangian~(\ref{eq:Lunitarygauge})
-      only has a manifest $\mathsf{U(1)}$ symmetry associated with the massless vector field, so it
+      only has a manifest $\mathrm{U(1)}$ symmetry associated with the massless vector field, so it
       seems we have lost three gauge symmetries. This, however, is just a consequence of
       choosing the unitary gauge. The Higgs mechanism can also be described in a manifestly
       gauge invariant way, and all currents remain conserved.
@@ -3484,8 +3486,8 @@ bookmarksopenlevel=10
             \label{fig:WZsunset}
           \end{figure} 
 
-          The tree level value $\rho=1$ is protected by an approximate $\mathsf{SU(2)}$ symmetry,
-          called custodial symmetry, which is only broken by the $\mathsf{U(1)_Y}$ gauge
+          The tree level value $\rho=1$ is protected by an approximate $\mathrm{SU(2)}$ symmetry,
+          called custodial symmetry, which is only broken by the $\mathrm{U(1)_Y}$ gauge
           interaction and by Yukawa couplings. Thus the corrections
           depend on the fermion masses, and are dominated by the top quark, as in
           Fig~\ref{fig:Htoploop}. The leading correction is 
@@ -3639,8 +3641,8 @@ bookmarksopenlevel=10
       \end{figure}
     
       The electroweak theory is a chiral gauge theory with gauge group
-      $\mathsf{SU(2)}_W \times \mathsf{U(1)}_Y$. This symmetry is spontaneously broken down to 
-      $\mathsf{U(1)}_\text{em}$ by the Higgs mechanism which generates the gauge boson and
+      $\mathrm{SU(2)}_W \times \mathrm{U(1)}_Y$. This symmetry is spontaneously broken down to 
+      $\mathrm{U(1)}_\text{em}$ by the Higgs mechanism which generates the gauge boson and
       Higgs masses, and also  all
       fermion masses, since direct mass terms are forbidden by gauge invariance.
 
@@ -3928,7 +3930,7 @@ bookmarksopenlevel=10
         \item A ``good idea'' was the quark model, proposed in 1964 independently by Gell-Mann and
           Zweig. The hypothesis that hadrons are made out of three quarks and antiquarks allowed one
           to understand their quantum numbers and mass spectrum in terms of an approximate
-          $\mathsf{SU(3)}$ flavour symmetry, the ``eightfold way''. Furthermore, the deep-inelastic
+          $\mathrm{SU(3)}$ flavour symmetry, the ``eightfold way''. Furthermore, the deep-inelastic
           scattering experiments at SLAC in 1968 could be interpreted as elastic scattering of
           electrons off point-like partons inside the proton, and it was natural to identify these
           partons with quarks.    
@@ -3939,7 +3941,7 @@ bookmarksopenlevel=10
 
         
          \item Another ``good idea'' was the invention of non-Abelian gauge theories by Yang and Mills
-           in 1954. The local symmetry was the isospin group $\mathsf{SU(2)}$, and one hoped to
+           in 1954. The local symmetry was the isospin group $\mathrm{SU(2)}$, and one hoped to
            obtain in this way a theory of strong interactions with the $\rho$-mesons as gauge
            bosons. Only several years later, after the $V-A$-structure of the weak interactions
            had been identified, Bludman, Glashow, Salam and Ward and others developed theories of 
@@ -3966,12 +3968,12 @@ bookmarksopenlevel=10
 
            But again, these new developments were applied to broken symmetries in strong interactions,
            and in 1967 Weinberg still considered the chiral  
-           $\mathsf{SU(2)}_\text{L}\times\mathsf{SU(2)}_\text{R}$ symmetry of strong interactions
+           $\mathrm{SU(2)}_\text{L}\times\mathrm{SU(2)}_\text{R}$ symmetry of strong interactions
            to be a gauge theory with the $\rho$ and $a1$ mesons as gauge bosons. In the same year,
            however, 
            he then applied the idea of spontaneous symmetry breaking to the weak interactions of
            the leptons of the first family, $(\nu_L, e_L)$ and $e_R$ (he did not believe in quarks!).
-           This led to the gauge group $\mathsf{SU(2)}\times\mathsf{U(1)}$, massive $W$ and
+           This led to the gauge group $\mathrm{SU(2)}\times\mathrm{U(1)}$, massive $W$ and
            $Z$ bosons, a massless photon and the Higgs boson! 
 
       \end{enumerate}
