--- a/hep-ph-0609174/FTSM.tex
+++ b/hep-ph-0609174/FTSM.tex
@@ -36,7 +36,7 @@ bookmarksopenlevel=10
 \raggedbottom
 \pagestyle{plain}
 
-\usepackage{eulervm}
+%\usepackage{eulervm}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
