--- a/hep-ph-0703280/Higgs-SM.tex
+++ b/hep-ph-0703280/Higgs-SM.tex
@@ -1,17 +1,49 @@
-\documentclass[aps,prd,12pt]{revtex4}
+\documentclass[aps,prd,12pt]{revtex4-2}
 \usepackage{graphics,amssymb,epsfig,float,psfrag,axodraw}
 \usepackage[usenames,dvips]{color}
 \usepackage{rotating}
 
-\oddsidemargin -0.06in
-\topmargin -10mm
-\textwidth 170mm
-\textheight 230mm %250mm
-\renewcommand{\topfraction}{0.1}
-\renewcommand{\bottomfraction}{0.1}
-\renewcommand{\textfraction}{0.1}
-\renewcommand{\floatpagefraction}{0.95}
-\setlength{\unitlength}{1mm}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %%%%%%%%%%%%%%%%
 \begin{document}
@@ -72,6 +104,7 @@
 %\noindent {PACS:} %95.35.+d, 12.60.Jv, 14.80.Ly
 \end{abstract}
 \maketitle
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
@@ -2127,6 +2160,8 @@ the ``little hierarchy problem''
        Prof. J.A.~Budagov and D.I.~Kazakov 
        for fruitful collaboration and 
        for useful discussions.
+
+\small
 
 %%%%%%%%%%%%%%%%%%%%
 \section{Appendices}
