--- a/2108.07292/main.tex
+++ b/2108.07292/main.tex
@@ -86,7 +86,7 @@ Bell's theorem is often said to imply that quantum mechanics violates local caus
 \label{intro}
 Bell's theorem \cite{Bell1964OnEPR} has been a milestone in our understanding of quantum mechanics by detailing just what correlations are necessary to reproduce observations. Unfortunately, many physicists have jumped to incorrect conclusions from it. A 2016 survey among professional physicists \cite{Sujeevan2016Survey} found that 34\% believe Bell's theorem shows that ``Hidden variables are impossible,'' that is, they think Bell's theorem rules out theories in which measurement outcomes are determined by variables that are not accounted for in standard quantum mechanics. Similarly, in a survey conducted among professional quantum physicists at a conference in 2012 \cite{Schlosshauer2013Attitudes}, 64\% claimed that Bell's theorem rules out hidden variable theories (and said local realism is untenable). This is of course not so. Bell's theorem merely shows that a hidden variables theory {\emph{which fulfils all the assumptions of the theorem}} is ruled out by observation.
 
-Bell's theorem however contains one questionable assumption: (Bell-)Statistical Independence, sometimes called the ``Free Will'' or ``Free Choice'' assumption (here capitalised and labelled Bell to distinguish it from the intuitive ideas of physical statistical independence, free will and free  choice).
+However, Bell's theorem  apparently contains one assumption which is questionable : (Bell-)Statistical Independence, sometimes called the ``Free Will'' or ``Free Choice'' assumption (here it is capitalised and labelled Bell to distinguish it from the intuitive ideas of physical statistical independence, free will and free  choice).
 Indeed, one can interpret \emph{all} experiments that have found violations of Bell's inequality as simply demonstrating that if quantum mechanics is underpinned by a local, causal, and deterministic theory, then that underlying theory must violate Bell-Statistical Independence. Clearly the conclusion to draw from this is that we should look for a hidden-variables theory that violates Bell-Statistical Independence, not least to develop a quantum formalism that is compatible with General Relativity. 
 Of course this is not historically what has happened. Instead, physicists have collectively discarded the possibility that Bell-Statistical Independence might be violated because they misunderstood what it means. For example, referring to Bell-Statistical Independence as ``free will'' or ``free choice'' seems to have created a strong cognitive bias for accepting the assumption unthinkingly. 
 
