--- a/0909.4541/HiggsLectures1.tex
+++ b/0909.4541/HiggsLectures1.tex
@@ -213,7 +213,7 @@ These lectures focus on the structure of various Higgs boson theories. Topics in
 The fermions of the Standard Model and some of the gauge bosons have mass. This is a troublesome statement since gauge invariance appears to allow neither. Let us review the situation for gauge bosons and chiral fermions and introduce the Higgs mechanism that solves it. First, we illustrate the concepts with a massive $U(1)$ theory -- spontaneously broken QED.
 
 \noindent
-{\it Gauge Boson Mass}
+\subsection{Gauge Boson Mass}
 
 The lagrangian of QED is
 \beq
@@ -301,8 +301,7 @@ after appropriate symmetry factors are included.
 
 The general principles to retain from this discussion are first that massive gauge bosons can be accomplished in a gauge-invariant way through the Higgs mechanism. The Higgs boson that gets a vev breaks whatever symmetries it is charged under -- the Higgs vev carries charge into the vacuum. And finally, the Higgs boson that gives mass to the gauge boson couples to it proportional to the gauge boson mass.
 
-\noindent
-{\it Chiral Fermion Masses}
+\subsection{Chiral Fermion Masses}
 
 
 In quantum field theory a four-component fermion can be written in its chiral basis as
