--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -281,7 +281,7 @@ case we will know what the cartesian power $A^n$ is for each $n=0,1,2,\cdots$, a
 functions are then maps $f: A^n\to B$. Not much of a surprise.
 
 We have to take care, however. In the first place, a given category may not have cartesian
-products (it fails to have enough types). Even if it does, the maps allowed may be too
+products ([if] it fails to have enough types). Even if it does, the maps allowed may be too
 restricted --- for logical purposes. Take the category of groups and homomorphisms, for
 example. The required products exist. A map $f : A^2 \to B$ in this category has to be a
 group homomorphism, naturally. Suppose two maps $u,v: \AB$ were given. Intuitively we
