--- a/1511.00729/1511.00729.tex
+++ b/1511.00729/1511.00729.tex
@@ -9,21 +9,43 @@
 
 % RECOMMENDED %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[graybox]{svmult}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
 
 % choose options for [] as required from the list
 % in the Reference Guide
 
-\usepackage{mathptmx}       % selects Times Roman as basic font
-\usepackage{helvet}         % selects Helvetica as sans-serif font
-\usepackage{courier}        % selects Courier as typewriter font
-\usepackage{type1cm}        % activate if the above 3 fonts are
-                            % not available on your system
 %
 \usepackage{makeidx}         % allows index generation
 \usepackage{graphicx}        % standard LaTeX graphics tool
                              % when including figure files
 \usepackage{multicol}        % used for the two-column index
 \usepackage[bottom]{footmisc}% places footnotes at page bottom
+
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 
 % see the list of further useful packages
 % in the Reference Guide
@@ -37,8 +59,6 @@
 \begin{document}
 
 \title*{The significance of measurement independence for Bell inequalities and locality}
-
-\titlerunning{Measurement independence, Bell inequalities, and locality}
 
 % Use \titlerunning{Short Title} for an abbreviated version of
 % your contribution title if the original one is too long
@@ -133,6 +153,7 @@ Thus, an observer cannot distinguish, via any local measurement $x$, whether a d
 p(\lambda|x,y,P) = p(\lambda|P).
 \end{equation}
 Thus, knowledge of the underlying variable gives no information about the measurement procedure, and vice versa.  This property is often justified by an appeal to `experimental free will' \cite{dialectica}, as will be discussed in some detail further below. 
+\goodbreak
 
 The combination of all three properties is equivalent, via Eqs.~(\ref{bayes}) and (\ref{comp})-(\ref{mi}), to:
 \begin{svgraybox} {\bf Bell separability:} The joint probabilities of distantly-performed measurement procedures have an underlying model of the form
