--- a/1110.2253/gerry-DPF2011-paper-v09.tex
+++ b/1110.2253/gerry-DPF2011-paper-v09.tex
@@ -26,7 +26,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -179,7 +179,7 @@ work and that of EB and H.
 %
 \section{What was theoretical particle physics like in the early 1960s?} \label{sec:1}
 %
-It is ironic that just before the `` Golden age'' of particle physics
+It is ironic that just before the ``Golden age'' of particle physics
 began to unfold in the 1960s, Quantum Field theory was widely thought
 to have reached a dead end. There was no understanding as to how to go
 beyond coupling constant perturbation and thus there seemed to be
