--- a/1110.2253/gerry-DPF2011-paper-v09.tex
+++ b/1110.2253/gerry-DPF2011-paper-v09.tex
@@ -277,7 +277,7 @@ with its symmetry and then formulated a new (not coupling constant
 perturbation theory) leading order approximation. This formulation led
 to a constraint that allowed consistency if a zero mass pseudoscalar
 boson appeared in the calculated particle spectrum. This is the first
-example of the Nambu- Goldstone boson.  NJL argued, without an
+example of the Nambu-Goldstone boson.  NJL argued, without an
 entirely convincing proof, that the massless particle is an exact
 requirement following from the imposition of dynamical symmetry
 breaking. This was a truly major breakthrough with new physics and a
@@ -316,7 +316,7 @@ find that there was a way around this connection. Zero mass particles in nature 
 exception of the photon and presumably the graviton. Consequently, the idea of spontaneous symmetry breaking
 seemed like it could not lead to new physics. Describing how this apparent problem was solved is the main point of
 this paper. But before I get to this I will indicate why the whole
-appearance of addition solutions to Quantum Field theory (QFT) beyond those
+appearance of additional solutions to Quantum Field theory (QFT) beyond those
 given by perturbation theory are to be expected and are in fact
 suggested (and explained) by the solution set of ordinary differential differential equations. This
 analysis is relatively new, but I think helps to clarify what is happening here even for those without
