--- a/1807.08416/fundamental.tex
+++ b/1807.08416/fundamental.tex
@@ -32,6 +32,21 @@
 \definecolor{yellow2}{rgb}{1,1,0.9}
 \def\tweet#1{ \vspace{2mm} \begin{center} \fcolorbox{yellow2}{yellow2}{ \parbox{11.2cm}{#1}} \vspace{2mm} \end{center} }
 
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 
 \title{Some Fundamental Theorems in Mathematics}
 \fancyhead{}
@@ -92,6 +107,8 @@
 %  5/26/18 update, to 20
 %  5/10/18 start, to 10
 
+\pagestyle{plain}
+
 \begin{document}
 \maketitle
 
@@ -109,7 +126,7 @@ within a context" we try sometimes to give some context.
 Of course, any such list of theorems is a matter of personal preferences, taste
 and limitations. The number of theorems is arbitrary, the initial obvious goal was 42 
 but that number got eventually surpassed as it is hard to stop, once started. 
-As a compensation, there are 42 ``tweetable" theorems with included proofs. 
+As a compensation, there are 42 ``tweetable'' theorems with included proofs. 
 More comments on the choice of the theorems is included in an epilogue.
 For literature on general mathematics, see 
 \cite{princetonguide,princetonguideapplied,atiyah2000,Garrity,Gowers2002,Stillwell2016,KrantzPark,ConwayCapstone},
@@ -3387,7 +3404,7 @@ See \cite{RahmanSchmeisser}.
 \index{Sturm chain}
 
 \begin{comment}
-%Jacques Gélinas  from Ottawa <jacquesgg00@gmail.com> writes 
+%Jacques GÃ©linas  from Ottawa <jacquesgg00@gmail.com> writes 
 Sturm on real roots of a polynomial in an interval (1829).
 Charles Sturm was a very well known mathematician in
 the middle 19th century France and his name is on the Eiffel tower.
@@ -3396,7 +3413,7 @@ but got the chair of Amp\`ere in the Acad\'emie.
 Sturm found his theorem on sequences while studying solutions of differential
 equations "Sturm-Liouville theory" and credits Fourier for inspiration.
 Appended is a (rare) reproduction of the 1829 original communication
-in the Bulletin de Férussac, a privately supported scientific journal.
+in the Bulletin de FÃ©russac, a privately supported scientific journal.
 I was very surprised to see a second summary of a proof of Descartes theorem,
 rediscovered by Edmond Laguerre in 1882 and usually (wrongly) attributed to him.
 Laguerre, an amateur mathematician officer in the French army, would surely
@@ -3404,7 +3421,7 @@ have referenced Sturm ! Moreover, the version of Sturm has more ideas than
 what Laguerre published.  Descartes ==> Fourier ==> Sturm ==> Descartes
 There is a recent book about Sturm by a French philosopher
 and she details why the theorem made him immediately famous in Europe.
-Ssee "Sturm Sinacoeur" or see page 18-19 "Réception générale"
+Ssee "Sturm Sinacoeur" or see page 18-19 "RÃ©ception gÃ©nÃ©rale"
 https://books.google.ca/books?id=Pxz6TXMfPLwC&pg=PA24&lpg=PA24&dq=sturm+Sinacoeur
 \end{comment}
 
@@ -17027,7 +17044,7 @@ Banach-Mazur theorem
 Brill-Noether theorem
 Bott periodicity theorem
 
-Lindström's Lemma
+LindstrÃ¶m's Lemma
 
 If X is the path matrix of a planar network,
 then the minor (=subdeterminant) taken from
@@ -17036,7 +17053,7 @@ sum of the weights of the non-intersecting path
 families from the source nodes i 1 , . . . , i k to the
 sink nodes j 1 , . . . , j k .
 
-(Karlin & McGregor 1959, Lindström 1973, Gessel & Viennot 1985)
+(Karlin & McGregor 1959, LindstrÃ¶m 1973, Gessel & Viennot 1985)
 
 
 
@@ -17312,8 +17329,8 @@ title  = "The geometry of the group of symplectic diffeomorphisms",
 year   = "2007"
 
 
-A.Banyaga Sur la structure du groupe des difféomorphismes qui
-préservent une forme symplectique, Comm.Math.Helv. 53 (1978),
+A.Banyaga Sur la structure du groupe des diffÃ©omorphismes qui
+prÃ©servent une forme symplectique, Comm.Math.Helv. 53 (1978),
 174-227.
 
 A.Banyaga The structure of classical diffeomorphism groups,
