--- a/quant-ph-0607057/norsen.tex
+++ b/quant-ph-0607057/norsen.tex
@@ -2,11 +2,18 @@
 \documentclass[12pt]{article}
 \usepackage{graphicx,amssymb}
 %\renewcommand{\baselinestretch}{1.75}
-\setlength{\textwidth}{15cm}
-\setlength{\textheight}{21.5cm}
-\setlength{\topmargin}{0.0cm}
-\setlength{\oddsidemargin}{0.5cm}
-\setlength{\evensidemargin}{0.5cm}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/cmrsum}
 
 \usepackage[colorlinks=true
 ,urlcolor=blue
@@ -21,18 +28,6 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
-\usepackage[small]{titlesec}
-
-% different \sum and also fixes underbraces
-\input{../helpers/mnsymbol.tex}
 
 
 \begin{document}
