--- a/1912.10642v6/ct-notes-new.tex
+++ b/1912.10642v6/ct-notes-new.tex
@@ -28,7 +28,7 @@ bookmarksopenlevel=10
 \def\simord{\mathord\sim}
 
 % Other packages
-\usepackage[papersize={7.0in, 10.0in}, left=.6in, right=.6in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.6in, right=.6in, top=.7in, bottom=1in]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amssymb}
